--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "bootstrap-sass": "3.3.5",
     "pretender": "~0.9.0",
     "lodash": "~3.7.0",
-    "Faker": "~3.0.0"
+    "Faker": "~3.0.0",
+    "leaflet": "~0.7.5",
+    "leaflet.markercluster": "~0.4.0"
   }
 }
