--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "1.13.8",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3"
+    "ember-export-application-global": "^1.0.3",
+    "ember-leaflet": "git://github.com/gabesmed/ember-leaflet.git#c80b3234801f971a64c2e633303114ded6b7fbaf"
   }
 }
