--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "broccoli-asset-rev": "^2.1.2",
     "ember-bootstrap-sass": "0.1.0",
     "ember-cli": "1.13.8",
+    "ember-cli-active-link-wrapper": "0.0.4",
     "ember-cli-app-version": "0.5.0",
     "ember-cli-babel": "^5.1.3",
     "ember-cli-content-security-policy": "0.4.0",
