--- a/server/Gemfile
+++ b/server/Gemfile
@@ -1,11 +1,9 @@
 source 'https://rubygems.org'
+ruby '2.2.3'
 
 gem 'rails', '4.2.4'
-gem 'sqlite3'
-gem 'sass-rails', '~> 5.0'
-gem 'uglifier', '>= 1.3.0'
-gem 'jquery-rails'
-gem 'turbolinks'
+gem 'pg'
+gem 'active_model_serializers'
 
 # gem 'unicorn'
 gem 'bootstrap-sass', '~> 3.3.5'
