--- a/server/config/database.yml
+++ b/server/config/database.yml
@@ -12,3 +12,9 @@ test: &test
   pool: 5
   timeout: 5000
 
+production:
+  adapter: postgresql
+  database: pizzaweek_prod
+  min_messages: 'warning'
+  pool: 5
+  timeout: 5000
